--- a/TS/appsettings.json
+++ b/TS/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "ACDt1vR3lXToPQ1g3MyNACDt1vR3lXToPQ1g3MyN",
+    "Issuer": "http://localhost:10002",
+    "Audience": "http://localhost:10002"
+  }
 }
