Added ErrorHandlingMiddleware - Added custom exceptions that will serialize and will be written in the http response

--- a/IdentityService/IdentityService.csproj
+++ b/IdentityService/IdentityService.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonModules\Common.Web.csproj" />
     <ProjectReference Include="..\IdentityService.Data.Contracts\IdentityService.Data.Contracts.csproj" />
     <ProjectReference Include="..\IdentityService.Data\IdentityService.Data.csproj" />
   </ItemGroup>
