--- a/TS.Data/TS.Data.csproj
+++ b/TS.Data/TS.Data.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\TS.Data.Contracts\TS.Data.Contracts.csproj" />
   </ItemGroup>
 
