- migration history destroyed - new foundation tables for identity added - IdentityUser Extended and functioning

--- a/IdentityService.Data/IdentityService.Data.csproj
+++ b/IdentityService.Data/IdentityService.Data.csproj
@@ -12,7 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IdentityService.Data.Contracts\IdentityService.Data.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
