--- a/TA/appsettings.json
+++ b/TA/appsettings.json
@@ -10,5 +10,8 @@
     "Key": "ACDt1vR3lXToPQ1g3MyNACDt1vR3lXToPQ1g3MyN",
     "Issuer": "http://localhost:10002",
     "Audience": "http://localhost:10002"
+  },
+  "Urls": {
+    "Identity": "http://localhost:10002"
   }
 }
