--- a/TA/Properties/launchSettings.json
+++ b/TA/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:10003",
+      "applicationUrl": "http://localhost:10003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
